Use collections of individual buffers to avoid copying data when returning a subset or concatenation of data at each stage.